--- a/corehq/apps/userreports/templates/userreports/configurable_report.html
+++ b/corehq/apps/userreports/templates/userreports/configurable_report.html
@@ -51,6 +51,8 @@
   {% endif %}
   {% if can_edit_report %}
     {% include 'userreports/partials/edit_report_button.html' %}
+  {% elif can_delete_report %}
+    {% include 'userreports/partials/delete_report_button.html' with report_id=report.report_config_id %}
   {% endif %}
 {% endblock %}
 
