--- a/corehq/apps/cloudcare/templates/formplayer/menu_list.html
+++ b/corehq/apps/cloudcare/templates/formplayer/menu_list.html
@@ -74,7 +74,7 @@
 </script>
 
 <script type="text/template" id="menu-view-grid-item-template">
-  <div class="col-xs-6 col-sm-4 col-lg-3">
+  <div class="col-xs-6 col-sm-4 col-md-3">
     <% if (imageUrl) { %>
     <div class="gridicon badge-container" style="background-image: url('<%- imageUrl %>');">
       <%= _.template($('#maybe-custom-badge-template').text())(arguments[0]) %>
@@ -100,7 +100,7 @@
   <div class="clearfix visible-sm"></div>
   <% } %>
   <% if (menuIndex % 4 === 3) { %>
-  <div class="clearfix visible-lg"></div>
+  <div class="clearfix visible-md visible-lg"></div>
   <% } %>
 </script>
 
